# arrcmp

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json
bench/: CMakeLists.txt  bench_arrcmp.cpp  bench_ordering.cpp  run_and_graph_results.sh
bench/results/: cmp.csv  cmp_skylake.csv
include/: arrcmp.hpp
test/: CMakeLists.txt  test_arrcmp.cpp
